--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AJAX!!!!!!!</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-    <script src="client.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="vendors/jquery.js" crossorigin="anonymous"></script>
+    <script src="scripts/client.js"></script>
+    <link rel="stylesheet" href="styles/style.css">
     
 </head>
 <body>
