all working after random quote

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
     <h1>AJAX BITCHES!!</h1>
+    <button id="quoteButton">Get a Quote!</button>
+
+    <div id="quoteOutput">
+
+    </div>
     
 </body>
 </html>
